@@ -7,7 +7,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -26,13 +25,12 @@ public class ReferenciaMotoRepositoryImpl implements ReferenciaMotoRepository {
     public List<ReferenciaMoto> obtenerTodos() {
         return jpaRepository.findAll().stream()
                 .map(this::mapToDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Optional<ReferenciaMoto> buscarPorId(int id) {
-        return jpaRepository.findById(id)
-                .map(this::mapToDomain);
+        return jpaRepository.findById(id).map(this::mapToDomain);
     }
 
     @Override
@@ -40,7 +38,7 @@ public class ReferenciaMotoRepositoryImpl implements ReferenciaMotoRepository {
         jpaRepository.deleteById(id);
     }
 
-    // --- MAPPERS INTERNOS ---
+    // --- MAPPERS ---
 
     private ReferenciaMoto mapToDomain(ReferenciaEntity entity) {
         if (entity == null) return null;
@@ -59,6 +57,13 @@ public class ReferenciaMotoRepositoryImpl implements ReferenciaMotoRepository {
         ReferenciaEntity entity = new ReferenciaEntity();
         entity.setIdReferencia(domain.getIdReferencia());
         entity.setNombre(domain.getNombre());
+
+        // IMPORTANTE: Para que no cree una marca nueva, le pasamos una entidad con el ID
+        if (domain.getIdMarca() != null) {
+            MarcaEntity marca = new MarcaEntity();
+            marca.setIdMarca(domain.getIdMarca());
+            entity.setMarca(marca);
+        }
 
         return entity;
     }
